--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
    "name": "Currency Calculator",
-   "short_name": "MyApp",
-   "icons": [ ... ],
+   "short_name": "Currency",
+   "icons": [ "img/rocket_start.png" ],
    "start_url": "index.html",
    "display": "standalone",
    "orientation": "landscape"
